Trying to get the scrollbar to sit correctly when below a horizontal element with a height other than the default value...

--- a/themes/lozenge2/style/jquery.jscrollpane.lozenge2.css
+++ b/themes/lozenge2/style/jquery.jscrollpane.lozenge2.css
@@ -11,13 +11,6 @@
 	background:  transparent;
 }
 
-.jspTrack .jspActive,
-.jspTrack .jspHover,
-.jspDrag:hover
-{
-	background: transparent;
-}
-
 .jspHorizontalBar
 {
 	height: 20px;
@@ -95,59 +88,4 @@
 	background: url(../image/v_drag_bottom.png) no-repeat;
 	height: 13px;
 	width: 100%;
-}
-
-
-.jspArrow
-{
-	background: url(../image/ui-icons_222222_256x240.png) no-repeat;
-	
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	border-radius: 10px;
-}
-
-.jspVerticalBar>.jspActive,
-.jspArrow:hover
-{
-	background-image: url('../image/ui-icons_cd0a0a_256x240.png');
-}
-
-.jspVerticalBar>.jspDisabled,
-.jspVerticalBar>.jspDisabled:hover,
-.jspHorizontalBar>.jspDisabled,
-.jspHorizontalBar>.jspDisabled:hover
-{
-	background-color: transparent;
-	background-image: url('../image/ui-icons_888888_256x240.png');
-}
-
-.jspVerticalBar .jspArrow
-{
-	height: 15px;
-}
-
-.jspHorizontalBar .jspArrow
-{
-	width: 15px;
-}
-
-.jspArrowUp
-{
-	background-position: 0 0;
-}
-
-.jspArrowDown
-{
-	background-position: -64px 0 !important; 
-}
-
-.jspArrowLeft
-{
-	background-position: -96px 0 !important;
-}
-
-.jspArrowRight
-{
-	background-position: -32px 0 !important;
 }
